# Gerenciamento_de_rostos

./: .gitignore  .luarc.json  Gerenciamento_face_server.apidog.json  Makefile  README.md  lista.txt  teste.lua  uploader.lua
src/: build.sh  (+7 more)
src/cBind/: CMakeLists.txt  extractMetrics.cpp  extract_lua.c  faceCompar.cpp  main.c  main.cpp  main.txt
src/cBind/.cache/clangd/index/: LuaCEmbed.h.C6755507A82C4861.idx  active_learning.h.8DC2791C719B08FA.idx  active_learning_abstract.h.5B3CE861DFA4A3AF.idx  algs.h.6980DB71B981BF5A.idx  any.h.D2326D221FB27947.idx  any.h.F8760A10F60C7B28.idx  any_abstract.h.04BEE11E58AA83E7.idx  any_decision_function.h.F95A18C2B62F51FE.idx  any_decision_function_abstract.h.92EBC8D51D0AB7DB.idx  any_function.h.8CB0B1DD3CD2EDC3.idx  any_function_abstract.h.13E1CF6FF8F7237D.idx  any_function_impl.h.2323A8806825DED8.idx  any_function_impl2.h.17FC1B01188CED06.idx  any_trainer.h.0481600647DE3C8F.idx  any_trainer_abstract.h.D91CDACB3C2362DD.idx  array.h.2BA5AE74066C40C2.idx  array2d.h.BCF4982D17FE6C9E.idx  array2d_generic_image.h.2874BBEB21A529C6.idx  array2d_kernel.h.56E6C8E5664BCF59.idx  array2d_kernel_abstract.h.2C9C4B280E91732A.idx  array_kernel.h.DF10463A85C0DD5F.idx  array_kernel_abstract.h.259EACE4D31E5F0E.idx  array_tools.h.5DC784D5B8DBEA82.idx  array_tools_abstract.h.884DF8CFF91F2653.idx  assert.h.FB9212C5ADFEA66C.idx  assign_image.h.F2C9BF787DD15F60.idx  assign_image_abstract.h.F5EDFE99FAEF5B5C.idx  assignment_function.h.12C26B8DD0C5B283.idx  assignment_function_abstract.h.29498227EE7CDE4B.idx  async.cpp.D6088FC49BFBB415.idx  async.h.FB6A99C82547E3E6.idx  async_abstract.h.C606C81FAA9620C2.idx  auto.cpp.FC003A27900B8E2B.idx  auto.h.0F6BFEBDA2951F1C.idx  auto_abstract.h.08C16EE6128799C6.idx  auto_mutex_extension.h.8A8796ACE7036DEC.idx  (+755 more)
src/cBind/imageMagick/: CMakeLists.txt  imagemagick_example  main.c
(+717 files in other folders)
